# simplest_conan_consumer

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: lib.h
src/: lib.cpp  main.cpp
test/: test.cpp
